[tool.poetry]
name = "gpt-infringement-detector"
version = "0.1.0"
description = ""
authors = ["Andrew Dworschak <andrew@yakoa.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.53.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
